src/style.css
:root {
  --ON: initial;
  --OFF: ;

  --light: var(--ON);
  --dark: var(--OFF);

  --color-mono-00: var(--light, #ffffff) var(--dark, #111111);
  --color-mono-01: var(--light, #fafafa) var(--dark, #111111);
  --color-mono-02: var(--light, #f5f5f5) var(--dark, #171717);
  --color-mono-03: var(--light, #e5e5e5) var(--dark, #262626);
  --color-mono-04: var(--light, #d4d4d4) var(--dark, #404040);
  --color-mono-05: var(--light, #a3a3a3) var(--dark, #525252);
  --color-mono-06: var(--light, #737373) var(--dark, #737373);
  --color-mono-07: var(--light, #525252) var(--dark, #a3a3a3);
  --color-mono-08: var(--light, #404040) var(--dark, #d4d4d4);
  --color-mono-09: var(--light, #262626) var(--dark, #e5e5e5);
  --color-mono-10: var(--light, #171717) var(--dark, #f5f5f5);
  --color-mono-11: var(--light, #111111) var(--dark, #fafafa);

  --color-fg: var(--color-mono-11);
  --color-bg: var(--color-mono-00);

  --spacing: 0.25rem;

  --breakpoint-sm: 40rem;
  --breakpoint-md: 48rem;
  --breakpoint-lg: 64rem;
  --breakpoint-xl: 80rem;
  --breakpoint-2xl: 96rem;

  --text-xxs: 0.5rem;
  --text-xxs--line-height: calc(0.75 / 0.5);
  --text-xs: 0.75rem;
  --text-xs--line-height: calc(1 / 0.75);
  --text-sm: 0.875rem;
  --text-sm--line-height: calc(1.25 / 0.875);
  --text-base: 1rem;
  --text-base--line-height: calc(1.5 / 1);
  --text-lg: 1.125rem;
  --text-lg--line-height: calc(1.75 / 1.125);
  --text-xl: 1.25rem;
  --text-xl--line-height: calc(1.75 / 1.25);
  --text-2xl: 1.5rem;
  --text-2xl--line-height: calc(2 / 1.5);
  --text-3xl: 1.875rem;
  --text-3xl--line-height: calc(2.25 / 1.875);
  --text-4xl: 2.25rem;
  --text-4xl--line-height: calc(2.5 / 2.25);

  --font-sans: system-ui, sans-serif;
  --font-serif: "Times New Roman", Times, serif;
  --font-mono: monospace;

  --font-weight-extralight: 200;
  --font-weight-light: 300;
  --font-weight-normal: 400;
  --font-weight-medium: 500;
  --font-weight-semibold: 600;
  --font-weight-bold: 700;
  --font-weight-extrabold: 800;

  --radius-xs: 0.125rem;
  --radius-sm: 0.25rem;
  --radius-md: 0.375rem;
  --radius-lg: 0.5rem;
  --radius-xl: 0.75rem;
  --radius-full: calc(infinity * 1px);

  --ease-in: cubic-bezier(0.4, 0, 1, 1);
  --ease-out: cubic-bezier(0, 0, 0.2, 1);
  --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);

  --transition-duration-sm: 150ms;
  --transition-duration-md: 250ms;
  --transition-duration-lg: 350ms;
}

@media (prefers-color-scheme: dark) {
  :root {
    --light: var(--OFF);
    --dark: var(--ON);
  }
}

/* == RESET == */

/*
  References:
    - https://www.joshwcomeau.com/css/custom-css-reset
    - https://youtu.be/eWmDW4zEXt4
*/

/* Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
* {
  margin: 0;
}

html {
  /* Prevent unwanted layout shifting caused by scrollbar */
  scrollbar-gutter: stable;
}

body {
  /* Add accessible line-height */
  line-height: 1.5;
  /* Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* Improve media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

/* Inherit fonts for form controls */
input,
button,
textarea,
select {
  font: inherit;
}

/* Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* Improve line wrapping */
p,
li,
figcaption {
  text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

/* == GLOBAL == */

* {
  scrollbar-width: thin;
  scrollbar-color: var(--color-mono-03) transparent;
}

body {
  font-family: var(--font-sans);
  color: var(--color-fg);
  background-color: var(--color-bg);
  max-width: 48rem;
  margin: 0 auto;
  padding: calc(var(--spacing) * 8)
    clamp(var(--spacing) * 4, 5%, var(--spacing) * 6);
}

body > :not(:first-child) {
  margin-top: calc(var(--spacing) * 20);
}

body::before {
  content: "";
  position: absolute;
  inset: 0;
  z-index: -1;
  opacity: 0.5;
  background-image: radial-gradient(
    var(--color-mono-05) 0.5px,
    transparent 0.5px
  );
  background-size: 20px 20px;
  background-repeat: repeat;
  background-position: 0 0;
}

h1 {
  font-size: var(--text-4xl);
  line-height: var(--text-4xl--line-height);
  font-weight: var(--font-weight-extrabold);
}

h2 {
  font-size: var(--text-2xl);
  line-height: var(--text-2xl--line-height);
  font-weight: var(--font-weight-bold);
}

h3 {
  font-size: var(--text-xl);
  line-height: var(--text-xl--line-height);
  font-weight: var(--font-weight-semibold);
}

/* == COMPOSITION == */

.space-x-4 > :not(:first-child) {
  margin-left: calc(var(--spacing) * 4);
}

.grid-item-min-w-40 {
  --grid-item-min-width: calc(var(--spacing) * 40);
}
.grid-item-min-w-70 {
  --grid-item-min-width: calc(var(--spacing) * 70);
}
.grid {
  display: grid;
  grid-template-columns: repeat(
    auto-fit,
    minmax(min(100%, var(--grid-item-min-width)), 1fr)
  );
}

/* == UTILITY == */

.mt-6 {
  margin-top: calc(var(--spacing) * 6);
}
.mt-10 {
  margin-top: calc(var(--spacing) * 10);
}

.mb-6 {
  margin-bottom: calc(var(--spacing) * 6);
}

.gap-6 {
  gap: calc(var(--spacing) * 6);
}
.gap-10 {
  gap: calc(var(--spacing) * 10);
}

.text-mono-05 {
  color: var(--color-mono-05);
}
.text-mono-06 {
  color: var(--color-mono-06);
}

.text-sm {
  font-size: var(--text-sm);
  line-height: var(--text-sm--line-height);
}

.line-clamp-2 {
  overflow: hidden;
  display: -webkit-box;
  text-overflow: ellipsis;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

/* == BLOCK & EXCEPTION == */

a {
  color: inherit;
  transition-property: text-decoration-color;
  transition-duration: var(--transition-duration-lg);
  text-decoration-line: underline;
  text-decoration-color: var(--color-mono-04);
  text-decoration-thickness: calc(var(--spacing) * 0.35);
  text-underline-offset: calc(var(--spacing) * 1);
}
a:hover,
a:active {
  text-decoration-color: var(--color-fg);
}
a[data-type="no-underline"] {
  text-decoration-line: none;
  transition: none;
}

.brief > :not(:first-child) {
  margin-top: calc(var(--spacing) * 2);
}
.brief .title {
  color: var(--color-mono-10);
}
.brief .description {
  font-size: var(--text-base);
  line-height: var(--text-base--line-height);
  color: var(--color-mono-08);
}
.brief .chips > :not(:first-child) {
  margin-left: calc(var(--spacing) * 1);
}
.brief .chips > * {
  font-size: var(--text-sm);
  line-height: var(--text-sm--line-height);
  color: var(--color-mono-08);
  border: 1px solid var(--color-mono-04);
  border-radius: var(--radius-sm);
  padding: calc(var(--spacing) * 1) calc(var(--spacing) * 1.5);
}

.icon-arrow-up-right {
  display: inline-block;
  width: 0.75em;
  height: 0.75em;
  mask-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m19 15.477-.02-9.672a.802.802 0 0 0-.218-.577c-.145-.152-.34-.228-.587-.228H8.499a.751.751 0 0 0-.777.76c0 .199.076.371.227.517.15.145.326.218.525.218h3.733l4.52-.129-1.728 1.54-9.767 9.783a.692.692 0 0 0-.232.518c0 .205.078.387.235.545a.74.74 0 0 0 .542.237.73.73 0 0 0 .527-.224l9.775-9.78 1.544-1.727-.143 4.188v4.065c0 .199.075.376.225.531.15.155.327.232.531.232.202 0 .38-.076.534-.228a.768.768 0 0 0 .23-.569Z' fill='%23000'/%3E%3C/svg%3E");
  mask-repeat: no-repeat;
  mask-size: 100% 100%;
  background-color: currentColor;
  background-repeat: no-repeat;
  background-size: 100% 100%;
}

